--- a/Lab 5/styles.css
+++ b/Lab 5/styles.css
@@ -48,7 +48,7 @@ h1 {
   padding: 10px 20px;
   background-color: white;
   color: #000;
-  border: 1px solid #000;
+  border: none;
   border-radius: 5px;
   cursor: pointer;
   font-size: 18px;
