--- a/Lab 5/styles.css
+++ b/Lab 5/styles.css
@@ -3,7 +3,7 @@ body {
   margin: 0;
   padding: 0;
   background: linear-gradient(to right, white 50%, black 50%);
-  font-family: Arial, sans-serif;
+  font-family: Montserrat Black;
   height: 100vh;
   display: flex;
   flex-direction: column;
