--- a/Lab 5/styles.css
+++ b/Lab 5/styles.css
@@ -8,22 +8,19 @@ body {
   display: flex;
   flex-direction: column;
   justify-content: space-between;
-  align-items: center; /* Center content horizontally */
 }
 
 /* Header Styles */
 header {
   background: white;
   text-align: center;
-  padding: 40px; /* Increase the header size */
+  padding: 20px;
   position: relative;
   flex: 1;
-  display: flex; /* Allow for vertical alignment */
-  align-items: center; /* Center content vertically */
 }
 
 h1 {
-  font-size: 28px; /* Increase the font size */
+  font-size: 48px;
 }
 
 /* Animated Dice Image Styles */
@@ -47,8 +44,8 @@ h1 {
   margin: 10px auto;
   padding: 10px 20px;
   background-color: white;
-  color: #000;
-  border: none;
+  color: #000; /* Black font color */
+  border: 1px solid #000; /* Add a black border for contrast */
   border-radius: 5px;
   cursor: pointer;
   font-size: 18px;
